2008-03-12  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (run_move_to_dialog):
	Set a minimum size for the 'Change folder' dialog so it looks at
	least as wide as if it had the three buttons (N80831).

2008-03-12  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc (view_section) : NULL check
	* util.cc (unref_section_info) : unrefs a section_info element
	(make_global_section_list) : refs section_info elements before
	setting them as the data of the buttons' callbacks; uses
	unref_section_info to unref them once the buttons are destroyed
	(NB82316).

2008-03-11  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc (search_packages_reply) : small code correction

	* update-notifier.c (xexp_is_tag_and_not_empty) : checks whether
	a xexp is not NULL, has the given tag and isn't empty
	(compare_xexp_text) : gets the children with the given tag in two
	xexp and compares their texts
	(create_new_notifications_menu) : use xexp_is_tag_and_not_empty
	and compare_xexp_text for a cleaner code
	(handle_inotify) : if there are new notifications available, an empty
	SEEN_NOTIFICATIONS file is written; writing to this file will cause
	another call to handle_inotify() that will show the icon (NB82179).

2008-03-11  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operation.cc (ip_ensure_network): Use the
	ai_nw_preparing_installation l10n string when initializing the
	"entertaining user" progress bar dialog (N81445).

2008-03-10  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/user_files.c (user_file_open_for_read): Don't free the
	buffered string every time a line is read (N82048).

2008-03-10  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (check_for_notifications_thread): Check
	response code of HTTP request to determine whether we really got
	the file.  Leave the downloaded text on disk in case of failure
	for easier trouble shooting.  Call curl_easy_cleanup for
	correctness.
