@@ -2,7 +2,7 @@ hildon-application-manager (1:2.1.7~unreleased) unstable; urgency=low
 
   * Fixes: NB#80835, NB#81329, NB#80685, NB#81835, NB#81724, NB#81838.
   * Fixes: NB#81874, NB#81739, NB#82408, NB#81445, NB#82179, NB#82316.
-  * Fixes: NB#80831.
+  * Fixes: NB#80831, NB#81462.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Thu, 28 Feb 2008 13:32:24 +0200
 
